--- a/curcuits.html
+++ b/curcuits.html
@@ -80,7 +80,7 @@
             <tbody>
                 <tr>
                     <td><a href="https://f1.fandom.com/wiki/Adelaide_Street_Circuit"><img src="../Obr_Circuits/Adelaide.svg"></a><br> <label>Městský okruh Adelaide v Austrálii</label> </td>
-                    <td><a href="https://f1.fandom.com/wiki/"><img src="../Obr_Circuits/ain-diab.png"></a><br> <label> </label> </td>
+                    <td><a href="https://f1.fandom.com/wiki/Ain-Diab_Circuit"><img src="../Obr_Circuits/ain-diab.png"></a><br> <label> Ain Diab Circuit v Maroku</label> </td>
                     <td><a href="https://f1.fandom.com/wiki/"><img src="../Obr_Circuits/"></a><br> <label></label> </td>
                 </tr>
                 <tr>
