--- a/curcuits.html
+++ b/curcuits.html
@@ -35,12 +35,12 @@
                     <tr>
                         <td><a href="https://racingnews365.com/formula-1-circuits/bahrain-gp"><img src="../Obr_Circuits/bahrain.png"></a><br> <label>Okruh v Bahrainu</label> </td>
                         <td><a href="https://racingnews365.com/formula-1-circuits/saudi-arabian-gp"><img src="../Obr_Circuits/saudi.png"></a><br> <label>Okruh v Saudské Arábii</label> </td>
-                        <td><a href="https://racingnews365.com/formula-1-circuits/australian-gp"><img src="../Obr_Circuits/australie.png"></a><br> <label>Okruh v Austrálii</label> </td>
+                        <td><a href="https://racingnews365.com/formula-1-circuits/australian-gp"><img src="../Obr_Circuits/Australie.png"></a><br> <label>Okruh v Austrálii</label> </td>
                     </tr>
                     <tr>
                         <td><a href="https://racingnews365.com/formula-1-circuits/azerbaijan-gp"><img src="../Obr_Circuits/baku.png"></a><br> <label>Okruh v Azerbajdžánu</label> </td>
                         <td><a href="https://racingnews365.com/formula-1-circuits/miami-gp"><img src="../Obr_Circuits/miami.png"></a><br> <label>Okruh v Miami</label> </td>
-                        <td><a href="https://racingnews365.com/formula-1-circuits/emilia-romagna-gp"><img src="../Obr_Circuits/imola.png"></a><br> <label>Okruh v Itálii(Imola)</label> </td>
+                        <td><a href="https://racingnews365.com/formula-1-circuits/emilia-romagna-gp"><img src="../Obr_Circuits/Imola.png"></a><br> <label>Okruh v Itálii(Imola)</label> </td>
                     </tr>
                     <tr>
                         <td><a href="https://racingnews365.com/formula-1-circuits/monako-gp"><img src="../Obr_Circuits/monako.png"></a><br> <label>Okruh v Monaku</label> </td>
