snad nic neposeru
prosím chci to všechno v cajku

--- a/FIA.html
+++ b/FIA.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formule 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="template.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 <body>
@@ -19,7 +19,6 @@
             <div class="dropdown-content">
                 <ul>
                     <li><a href="index.html">Hlavní stránka</a></li>
-                    <li><a href="rules.html">Pravidla</a></li>
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
                     <li><a href="FIA.html">FIA</a></li>
@@ -35,8 +34,20 @@
 
         </Aside>
         <footer>
-
-        </footer>
+            <div>
+                <a href="https://www.formula1.com"><img src="F1White.png"></a>
+                <ul>
+                    <li><a href="https://f1.fandom.com/wiki/Formula_1_Wiki">F1 Wiki</a></li>
+                    <li><a href="index.html">Hlavní stánka</a></li>
+                    <li><a href="WChamp.html">Mistři světa</a></li>
+                    <li><a href="curcuits.html">Všechny okruhy</a></li>
+                    <li><a href="FIA.html">Fia</a></li>
+                    <li><a href="Monoposty.html">Monoposty</a></li>
+                </ul>
+                <p>&copy; 2023 My website about F1. All rights reserved.</p>
+                <p>Designed and developed by Daniel Votýpka</p>
+              
+            </div>
         <script src="js.js"></script>
 </body>
 </html>
