--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <div class="dropdown-content">
                 <ul>
                     <li><a href="index.html">Hlavní stránka</a></li>
-                    <li><a href="rules.html">Pravidla</a></li>
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
                     <li><a href="FIA.html">FIA</a></li>
@@ -54,15 +53,26 @@
           </div>
         </div>
 
-        <section> 
-            adsadas
+        <section>
         </section>
         <aside>
            <div><span id="nejblizsi-zavod">&nbsp;</span></div>
         
         </aside>
         <footer>
-
+          <div>
+            <a href="https://www.formula1.com"><img src="F1White.png"></a>
+            <ul>
+                <li><a href="https://f1.fandom.com/wiki/Formula_1_Wiki">F1 Wiki</a></li>
+                <li><a href="index.html">Hlavní stánka</a></li>
+                <li><a href="WChamp.html">Mistři světa</a></li>
+                <li><a href="curcuits.html">Všechny okruhy</a></li>
+                <li><a href="FIA.html">Fia</a></li>
+                <li><a href="Monoposty.html">Monoposty</a></li>
+            </ul>
+            <p>&copy; 2023 My website about F1. All rights reserved.</p>
+            <p>Designed and developed by Daniel Votýpka</p>
+        </div>
         </footer>
       
         <script src="js.js"></script>
