--- a/FIA.html
+++ b/FIA.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formule 1</title>
-    <link rel="stylesheet" href="template.css">
+    <title>FIA - Formule 1</title>
+    <link rel="stylesheet" href="FIA.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
+    <link rel="icon" sizes="180x180" href="favicon.png">
 </head>
 <body>
         <header>
@@ -22,13 +23,13 @@
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
                     <li><a href="FIA.html">FIA</a></li>
-                    <li><a href="Monoposty.html">Monoposty</a></li>
+                    <li><a href="Monoposty.html">Konstruktéři</a></li>
                 </ul>
             </div>
         </nav>
 
         <section> 
-nic hrozneho
+
 
         </section>
         <Aside>
@@ -42,7 +43,7 @@ nic hrozneho
                     <li><a href="index.html">Hlavní stánka</a></li>
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
-                    <li><a href="FIA.html">Fia</a></li>
+                    <li><a href="FIA.html">FIA</a></li>
                     <li><a href="Monoposty.html">Monoposty</a></li>
                 </ul>
                 <p>&copy; 2023 My website about F1. All rights reserved.</p>
