--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
                     <li><a href="FIA.html">FIA</a></li>
-                    <li><a href="Monoposty.html">Monoposty</a></li>
+                    <li><a href="Monoposty.html">Konstruktéři</a></li>
                 </ul>
             </div>
         </nav>
@@ -67,7 +67,7 @@
                 <li><a href="index.html">Hlavní stánka</a></li>
                 <li><a href="WChamp.html">Mistři světa</a></li>
                 <li><a href="curcuits.html">Všechny okruhy</a></li>
-                <li><a href="FIA.html">Fia</a></li>
+                <li><a href="FIA.html">FIA</a></li>
                 <li><a href="Monoposty.html">Monoposty</a></li>
             </ul>
             <p>&copy; 2023 My website about F1. All rights reserved.</p>
