--- a/FIA.html
+++ b/FIA.html
@@ -28,13 +28,42 @@
             </div>
         </nav>
 
-        <section> 
+        <div class="ff">
+            <aside class="ss">
+                <div><span id="nejblizsi-zavod">&nbsp;</span></div>
+            </aside>
+            <section class="ss"> 
+                <p>Tady se podíváme na všechny monoposty co se kdy objevili na startovacím roštu. U všech monopostů bude vidět rok působení plus jejich logo. Konstruktérů v minulosti bylo i více.
+                    Dříve totiž v určitých sezónách bylo na roštu 11 týmu. Nyní je to, ale 10, což znamená, že je 20 jezdců. Ukážeme si i budoucí monoposty co jsou oznámené.
+                </p>
+            </section>
+        </div> 
+        <div class="">
+            <P>
+            Zde se dozvíte více o Mezinárodní automobilové federaci (FIA) a jejím významu ve světě formule. FIA je mezinárodní organizace, která se zabývá řízením a regulací mnoha motorsportových disciplín, včetně Formule 1.
 
+FIA byla založena v roce 1904 a sídlí v Paříži ve Francii. Je to nejvyšší autorita v oblasti mezinárodního automobilového sportu a jejím hlavním cílem je zajistit bezpečnost, spravedlnost a udržitelnost motoristických soutěží. FIA spolupracuje s národními automobilovými federacemi z celého světa, aby stanovila pravidla a standardy pro automobilové závody.
 
-        </section>
-        <Aside>
+Formule 1 je nejslavnější a nejprestižnější motoristickou disciplínou, kterou FIA reguluje. Je to mezinárodní mistrovství závodů automobilů s otevřenými koly, které přitahuje pozornost milionů fanoušků z celého světa. Závody Formule 1 jsou pořádány na okruzích po celém světě a účastní se jich týmy s nejlepšími jezdci.
 
-        </Aside>
+FIA má zásadní vliv na Formuli 1 tím, že stanovuje pravidla, technické specifikace a bezpečnostní normy pro vozy, jezdce a tratě. Její role je také zajistit spravedlivé prostředí soutěže prostřednictvím pravidel týkajících se financování, přestupů jezdců a trestů za porušení pravidel. FIA se také aktivně snaží podporovat udržitelnost ve formuli, například prostřednictvím vývoje ekologičtějších technologií.
+
+Kromě Formule 1 FIA také reguluje další série jako Formule E (elektrické závody), rallye, endurance závody (např. 24 hodin Le Mans), turistické závody a mnoho dalších. Spolupracuje také s výrobci automobilů na vývoji bezpečnostních technologií pro silniční vozy.
+
+FIA je klíčovým hráčem v automobilovém sportu a její vliv na Formuli 1 a další disciplíny je nepopiratelný. Její práce přispívá k zajištění bezpečnosti a fairness ve světě motoristických soutěží a její snaha o udržitelnost reflektuje současné environmentální výzvy.
+FIA působí jako hlavní orgán, který řídí Formuli 1 a dohlíží na její správné fungování. Její role zahrnuje schvalování technických inovací a změn v pravidlech, udělování licencí pro jezdce a týmy, a také monitorování bezpečnostních standardů během závodů.
+
+Bezpečnost je pro FIA prioritou číslo jedna. Organizace se aktivně snaží minimalizovat riziko pro jezdce a zlepšovat bezpečnostní opatření na okruzích. Příkladem je zavedení HANS (Head and Neck Support) zařízení, které chrání jezdce před zraněním krku při nárazech, nebo vylepšení bezpečnostních bariér a technologií na okruzích.
+
+FIA také sleduje finanční stránku Formule 1 a bojuje proti nerovnováze sil mezi týmy. Snaží se zajistit, aby závody byly férové a dostupné pro všechny týmy, a zavádí pravidla omezení výdajů a distribuce příjmů ze závodů.
+
+Další důležitou oblastí, na kterou se FIA zaměřuje, je udržitelnost. Vzhledem k rostoucímu zájmu o ochranu životního prostředí se FIA snaží podporovat ekologicky šetrnější přístup v motoristickém sportu. Formule 1 se zaměřuje na vývoj hybridních a elektrických technologií a usiluje o snížení emisí skleníkových plynů.
+
+FIA také podporuje vzdělávání a rozvoj mladých jezdců prostřednictvím programů jako Formule 2 a Formule 3. Tyto série slouží jako důležitý krok před vstupem do Formule 1 a poskytují talentovaným jezdcům možnost získat zkušenosti a rozvíjet své dovednosti.
+
+Celkově lze říci, že FIA je klíčovým hráčem, který dohlíží na všechny důležité aspekty Formule 1. Její práce je zaměřena na zajištění bezpečnosti jezdců, spravedlnosti v soutěži a udržitelného rozvoje motoristického sportu
+        </P> 
+    </div>
         <footer>
             <div>
                 <a href="https://www.formula1.com"><img src="F1White.png"></a>
@@ -44,7 +73,7 @@
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
                     <li><a href="FIA.html">FIA</a></li>
-                    <li><a href="Monoposty.html">Monoposty</a></li>
+                    <li><a href="Monoposty.html">Konstruktéři</a></li>
                 </ul>
                 <p>&copy; 2023 My website about F1. All rights reserved.</p>
                 <p>Designed and developed by Daniel Votýpka</p>
