--- a/curcuits.html
+++ b/curcuits.html
@@ -200,7 +200,7 @@
                     <li><a href="WChamp.html">Mistři světa</a></li>
                     <li><a href="curcuits.html">Všechny okruhy</a></li>
                     <li><a href="FIA.html">FIA</a></li>
-                    <li><a href="Monoposty.html">Monoposty</a></li>
+                    <li><a href="Monoposty.html">Konstruktéři</a></li>
                 </ul>
                 <p>&copy; 2023 My website about F1. All rights reserved.</p>
                 <p>Designed and developed by Daniel Votýpka</p>
