--- a/FIA.html
+++ b/FIA.html
@@ -113,6 +113,10 @@ Je důležité si uvědomit, že konkrétní délka penalizací je stanovena př
 </div>
 <h2>Vlajky v F1
 </h2>
+<div style="text-align: center;">
+<img src="vlajky.jpg" alt="Flags" width="50%" height="50%" style="border: 2px solid rgb(210, 29, 29); padding: 20px;"><br>
+<label>Ukázka vlajek</label>
+</div>
 <div class="hh">
     <p class="pp">
         Ve Formuli 1 se používají různé druhy vlajek k signalizaci různých situací na trati. Tyto vlajky mají pro jezdce velký význam, protože jim poskytují informace o okamžitém stavu závodu a upozorňují na potenciální nebezpečí. Následující seznam popisuje nejčastěji používané druhy vlajek ve Formuli 1:<br>
