--- a/index.html
+++ b/index.html
@@ -53,12 +53,38 @@
           </div>
         </div>
 
-        <section>
-        </section>
-        <aside>
-           <div><span id="nejblizsi-zavod">&nbsp;</span></div>
-        
-        </aside>
+        <div class="ff">
+          <aside class="ss">
+            <div><span id="nejblizsi-zavod">&nbsp;</span></div>
+          </aside>
+          <section class="ss">
+            Vítejte na hlavní stránce o Formuli 1. Na tomto webu si ukážeme  mistry světa, okruhy, konstruktéry a také si něco řekneme o FIA.
+          </section>
+      </div>
+      <div class="ff">
+      <div class="bb1">
+        <h1>Velká cena Emilio Romanga byla zrušena</h1>
+        <img src="imola-potopa.jpg" alt="Potopa v Imole" width="782px" height="484px">
+        <p>
+          Velká cena Emilia Romagna byla zrušena kvůli povodním v regionu. Záplavy si v regionu vyžádaly už pět<br> lidských životů a stovky lidí musely být evakuovány.
+          Povodně v italském regionu Emilia Romagna trvaly<br> od úterka a místy napršela až polovina ročního průměru srážek za pouhých 36 hodin.<br>
+          <a href="https://www.formula1.com/en/latest/article.breaking-update-on-the-emilia-romagna-grand-prix-at-imola.14xk8GLh2Lr8wBGdJqhxnO.html"><b>Číst více...</b></a>
+        </p>
+      </div>
+      <div class="bb2">
+        <h1>Sucho-mokrá Velká cena Monaka byla ovládnuta Verstappenem  </h1>
+        <img src="Monaco.avif" alt="Monako 2023" width="740px" height="460px" style="padding-left: 20px">
+        <p>
+          Max Verstappen vyhrál závod s 78 okruhy. Fernando Alonso skončil druhý s náskokem 27,921 sekundy<br> a Esteban Ocon třetí s náskokem 36,990 sekundy.
+          Závod lehce zkomplikoval déšť. Alonso měl šanci na výhru,<br> kdyby mu jeho tým nedal středně tvrdé pneu a rovnou mu dali Intermidealy.
+          <br>
+          <a href="https://www.formula1.com/en/racing/2023/Monaco.html"><b>Číst více...</b></a>
+        </p>
+      </div>
+    
+    </div>
+
+
         <footer>
           <div>
             <a href="https://www.formula1.com"><img src="F1White.png"></a>
