--- a/WChamp.html
+++ b/WChamp.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Šampioni - Formule 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Wchamps.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="icon" sizes="180x180" href="favicon.png">
 </head>
@@ -27,13 +27,699 @@
                 </ul>
             </div>
         </nav>
+        <h1>F1 Světoví šampioni</h1>
+        <div class="ff">
+            <aside class="ss">
+                <div><span id="nejblizsi-zavod">&nbsp;</span></div>
+            </aside>
+            <section class="ss"> 
+                <p> Zde si ukážeme všechny mistry světa v F1. Už od roku 1950-2022. Celkově se prostřídalo 34 jmen.
+                </p>
+            </section>
+        </div>  
+        
+  <table>
+    <thead>
+      <tr>
+        <th>Rok</th>
+        <th>Šampion</th>
+        <th>Národnost</th>
+        <th>Tým</th>
+        <th>Vítězství</th>
+        <th>Pole Position</th>
+        <th>Podia </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1950</td>
+        <td>Giuseppe Farina</td>
+        <td>Itálie</td>
+        <td>Alfa Romeo</td>
+        <td>3</td>
+        <td>2</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1951</td>
+        <td>Juan Manuel Fangio</td>
+        <td>Argentina</td>
+        <td>Alfa Romeo</td>
+        <td>6</td>
+        <td>4</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>1952</td>
+        <td>Alberto Ascari</td>
+        <td>Itálie</td>
+        <td>Ferrari</td>
+        <td>6</td>
+        <td>6</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>1953</td>
+        <td>Alberto Ascari</td>
+        <td>Itálie</td>
+        <td>Ferrari</td>
+        <td>5</td>
+        <td>5</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1954</td>
+        <td>Juan Manuel Fangio</td>
+        <td>Argentina</td>
+        <td>Mercedes-Benz</td>
+        <td>6</td>
+        <td>3</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>1955</td>
+        <td>Juan Manuel Fangio</td>
+        <td>Argentina</td>
+        <td>Mercedes-Benz</td>
+        <td>4</td>
+        <td>3</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1956</td>
+        <td>Juan Manuel Fangio</td>
+        <td>Argentina</td>
+        <td>Ferrari</td>
+        <td>3</td>
+        <td>6</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>1957</td>
+        <td>Juan Manuel Fangio</td>
+        <td>Argentina</td>
+        <td>Maserati</td>
+        <td>4</td>
+        <td>4</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1958</td>
+        <td>Mike Hawthorn</td>
+        <td>Velká Británie</td>
+        <td>Ferrari</td>
+        <td>1</td>
+        <td>4</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>1959</td>
+        <td>Jack Brabham</td>
+        <td>Austrálie</td>
+        <td>Cooper-Climax</td>
+        <td>2</td>
+        <td>5</td>
+        <td>1</td>
+      </tr>
+      <tr>
+        <td>1960</td>
+        <td>Jack Brabham</td>
+        <td>Austrálie</td>
+        <td>Cooper-Climax</td>
+        <td>5</td>
+        <td>5</td>
+        <td>3</td>
+      </tr>    
+      <tr>
+        <td>1961</td>
+        <td>Phil Hill</td>
+        <td>USA</td>
+        <td>Ferrari</td>
+        <td>2</td>
+        <td>6</td>
+        <td>5</td>
+      </tr>  
+      <tr>
+        <td>1962</td>
+        <td>Graham Hill</td>
+        <td>Velká Británie</td>
+        <td>BRM</td>
+        <td>4</td>
+        <td>6</td>
+        <td>1</td>
+      </tr>  
+      <tr>
+        <td>1963</td>
+        <td>Jim Clark</td>
+        <td>Velká Británie</td>
+        <td>Lotus-Climax</td>
+        <td>7</td>
+        <td>9</td>
+        <td>7</td>
+      </tr> 
+      <tr>
+        <td>1964</td>
+        <td>John Surtees</td>
+        <td>Velká Británie</td>
+        <td>Ferrari</td>
+        <td>2</td>
+        <td>6</td>
+        <td>2</td>
+      </tr> 
+      <tr>
+        <td>1965</td>
+        <td>Jim Clark</td>
+        <td>Velká Británie</td>
+        <td>Lotus-Climax</td>
+        <td>6</td>
+        <td>6</td>
+        <td>6</td>
+      </tr> 
+      <tr>
+        <td>1966</td>
+        <td>Jack Brabham</td>
+        <td>Austrálie</td>
+        <td>Brabham-Repco</td>
+        <td>4</td>
+        <td>4</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>1967</td>
+        <td>Denny Hulme</td>
+        <td>Nový Zéland</td>
+        <td>Brabham-Repco</td>
+        <td>2</td>
+        <td>2</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1968</td>
+        <td>Graham Hill</td>
+        <td>Velká Británie</td>
+        <td>Lotus-Ford</td>
+        <td>3</td>
+        <td>1</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>1969</td>
+        <td>Jackie Stewart</td>
+        <td>Velká Británie</td>
+        <td>Matra-Ford</td>
+        <td>6</td>
+        <td>5</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>1970</td>
+        <td>Jochen Rindt</td>
+        <td>Rakousko</td>
+        <td>Lotus-Ford</td>
+        <td>5</td>
+        <td>5</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1971</td>
+        <td>Jackie Stewart</td>
+        <td>Velká Británie</td>
+        <td>Tyrrell-Ford</td>
+        <td>6</td>
+        <td>2</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>1972</td>
+        <td>Emerson Fittipaldi</td>
+        <td>Brazílie</td>
+        <td>Lotus-Ford</td>
+        <td>5</td>
+        <td>3</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>1973</td>
+        <td>Jackie Stewart</td>
+        <td>Velká Británie</td>
+        <td>Tyrrell-Ford</td>
+        <td>5</td>
+        <td>3</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>1974</td>
+        <td>Emerson Fittipaldi</td>
+        <td>Brazílie</td>
+        <td>McLaren-Ford</td>
+        <td>3</td>
+        <td>2</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>1975</td>
+        <td>Niki Lauda</td>
+        <td>Rakousko</td>
+        <td>Ferrari</td>
+        <td>5</td>
+        <td>2</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>1976</td>
+        <td>James Hunt</td>
+        <td>Velká Británie</td>
+        <td>McLaren-Ford</td>
+        <td>6</td>
+        <td>8</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>1977</td>
+        <td>Niki Lauda</td>
+        <td>Rakousko</td>
+        <td>Ferrari</td>
+        <td>3</td>
+        <td>2</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>1978</td>
+        <td>Mario Andretti</td>
+        <td>Velká Británie</td>
+        <td>Lotus-Ford</td>
+        <td>6</td>
+        <td>8</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>1979</td>
+        <td>Jody Scheckter</td>
+        <td>Jížní Afrika</td>
+        <td>Ferrari</td>
+        <td>3</td>
+        <td>3</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1980</td>
+        <td>Alan Jones</td>
+        <td>Austrálie</td>
+        <td>Williams-Ford</td>
+        <td>5</td>
+        <td>5</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>1981</td>
+        <td>Nelson Piquet</td>
+        <td>Brazil</td>
+        <td>Brabham-Ford</td>
+        <td>3</td>
+        <td>6</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>1982</td>
+        <td>Keke Rosberg</td>
+        <td>Finsko</td>
+        <td>Williams-Ford</td>
+        <td>1</td>
+        <td>1</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>1983</td>
+        <td>Nelson Piquet</td>
+        <td>Brazílie</td>
+        <td>Brabham-BMW</td>
+        <td>3</td>
+        <td>5</td>
+        <td>7</td>
+      </tr>
+      <tr>
+        <td>1984</td>
+        <td>Niki Lauda</td>
+        <td>Rakousko</td>
+        <td>McLaren-TAG</td>
+        <td>5</td>
+        <td>1</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>1985</td>
+        <td>Alain Prost</td>
+        <td>Francie</td>
+        <td>McLaren-TAG</td>
+        <td>5</td>
+        <td>2</td>
+        <td>16</td>
+      </tr>
+      <tr>
+        <td>1986</td>
+        <td>Alain Prost</td>
+        <td>Francie</td>
+        <td>McLaren-TAG</td>
+        <td>4</td>
+        <td>2</td>
+        <td>12</td>
+      </tr>
+      <tr>
+        <td>1987</td>
+        <td>Nelson Piquet</td>
+        <td>Brazílie</td>
+        <td>Williams-Honda</td>
+        <td>3</td>
+        <td>4</td>
+        <td>11</td>
+      </tr>
+      <tr>
+        <td>1988</td>
+        <td>Ayrton Senna</td>
+        <td>Brazílie</td>
+        <td>McLaren-Honda</td>
+        <td>8</td>
+        <td>13</td>
+        <td>11</td>
+      </tr>
+      <tr>
+        <td>1989</td>
+        <td>Alain Prost</td>
+        <td>Francie</td>
+        <td>McLaren-Honda</td>
+        <td>4</td>
+        <td>4</td>
+        <td>15</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>Ayrton Senna</td>
+        <td>Brazílie</td>
+        <td>McLaren-Honda</td>
+        <td>6</td>
+        <td>10</td>
+        <td>13</td>
+      </tr>
+      <tr>
+        <td>1991</td>
+        <td>Ayrton Senna</td>
+        <td>Brazílie</td>
+        <td>McLaren-Honda</td>
+        <td>7</td>
+        <td>8</td>
+        <td>14</td>
+      </tr>
+      <tr>
+        <td>1992</td>
+        <td>Nigel Mansell</td>
+        <td>Velká Británie</td>
+        <td>Williams-Renault</td>
+        <td>9</td>
+        <td>14</td>
+        <td>14</td>
+      </tr>
+      <tr>
+        <td>1993</td>
+        <td>Alain Prost</td>
+        <td>Francie</td>
+        <td>Williams-Renault</td>
+        <td>7</td>
+        <td>13</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>1994</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Benetton-Ford</td>
+        <td>8</td>
+        <td>6</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>1995</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Benetton-Renault</td>
+        <td>9</td>
+        <td>9</td>
+        <td>11</td>
+      </tr>
+      <tr>
+        <td>1996</td>
+        <td>Damon Hill</td>
+        <td>Velká Británie</td>
+        <td>Williams-Renault</td>
+        <td>8</td>
+        <td>8</td>
+        <td>12</td>
+      </tr>
+      <tr>
+        <td>1997</td>
+        <td>Jacques Villeneuve</td>
+        <td>Kanada</td>
+        <td>Williams-Renault</td>
+        <td>7</td>
+        <td>10</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>1998</td>
+        <td>Mika Häkkinen</td>
+        <td>Finsko</td>
+        <td>McLaren-Mercedes</td>
+        <td>8</td>
+        <td>9</td>
+        <td>11</td>
+      </tr>
+      <tr>
+        <td>1999</td>
+        <td>Mika Häkkinen</td>
+        <td>Finsko</td>
+        <td>McLaren-Mercedes</td>
+        <td>5</td>
+        <td>11</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>2000</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Ferrari</td>
+        <td>9</td>
+        <td>9</td>
+        <td>18</td>
+      </tr>
+      <tr>
+        <td>2000</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Ferrari</td>
+        <td>9</td>
+        <td>9</td>
+        <td>18</td>
+      </tr>
+      <tr>
+        <td>2001</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Ferrari</td>
+        <td>9</td>
+        <td>12</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2002</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Ferrari</td>
+        <td>11</td>
+        <td>6</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2003</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Ferrari</td>
+        <td>6</td>
+        <td>5</td>
+        <td>8</td>
+      </tr>
+      <tr>
+        <td>2004</td>
+        <td>Michael Schumacher</td>
+        <td>Německo</td>
+        <td>Ferrari</td>
+        <td>13</td>
+        <td>8</td>
+        <td>18</td>
+      </tr>
+      <tr>
+        <td>2005</td>
+        <td>Fernando Alonso</td>
+        <td>Španělsko</td>
+        <td>Renault</td>
+        <td>7</td>
+        <td>6</td>
+        <td>15</td>
+      </tr>
+      <tr>
+        <td>2006</td>
+        <td>Fernando Alonso</td>
+        <td>Španělsko</td>
+        <td>Renault</td>
+        <td>7</td>
+        <td>6</td>
+        <td>14</td>
+      </tr>
+      <tr>
+        <td>2007</td>
+        <td>Kimi Räikkönen</td>
+        <td>Finsko</td>
+        <td>Ferrari</td>
+        <td>6</td>
+        <td>3</td>
+        <td>12</td>
+      </tr>
+      <tr>
+        <td>2008</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>McLaren-Mercedes</td>
+        <td>5</td>
+        <td>7</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>2009</td>
+        <td>Jenson Button</td>
+        <td>Velká Británie</td>
+        <td>Brawn-Mercedes</td>
+        <td>6</td>
+        <td>4</td>
+        <td>9</td>
+      </tr>
+      <tr>
+        <td>2010</td>
+        <td>Sebastian Vettel</td>
+        <td>Německo</td>
+        <td>Red Bull Racing</td>
+        <td>5</td>
+        <td>10</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>2011</td>
+        <td>Sebastian Vettel</td>
+        <td>Německo</td>
+        <td>Red Bull Racing</td>
+        <td>11</td>
+        <td>15</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2012</td>
+        <td>Sebastian Vettel</td>
+        <td>Německo</td>
+        <td>Red Bull Racing</td>
+        <td>5</td>
+        <td>6</td>
+        <td>14</td>
+      </tr>
+      <tr>
+        <td>2013</td>
+        <td>Sebastian Vettel</td>
+        <td>Německo</td>
+        <td>Red Bull Racing</td>
+        <td>13</td>
+        <td>9</td>
+        <td>16</td>
+      </tr>
+      <tr>
+        <td>2014</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>Mercedes</td>
+        <td>11</td>
+        <td>7</td>
+        <td>16</td>
+      </tr>
+      <tr>
+        <td>2015</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>Mercedes</td>
+        <td>10</td>
+        <td>11</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2016</td>
+        <td>Nico Rosberg</td>
+        <td>Germany</td>
+        <td>Mercedes</td>
+        <td>9</td>
+        <td>8</td>
+        <td>16</td>
+      </tr>
+      <tr>
+        <td>2017</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>Mercedes</td>
+        <td>9</td>
+        <td>11</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>Mercedes</td>
+        <td>11</td>
+        <td>11</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2019</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>Mercedes</td>
+        <td>11</td>
+        <td>5</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>2020</td>
+        <td>Lewis Hamilton</td>
+        <td>Velká Británie</td>
+        <td>Mercedes</td>
+        <td>11</td>
+        <td>10</td>
+        <td>14</td>
+      </tr>
+      <tr>
+        <td>2021</td>
+        <td>Max Verstappen</td>
+        <td>Netherlands</td>
+        <td>Red Bull Racing</td>
+        <td>10</td>
+        <td>9</td>
+        <td>14</td>
+      </tr>
+      <tr>
+        <td>2022</td>
+        <td>Max Verstappen</td>
+        <td>Nizozemsko</td>
+        <td>Red Bull Racing</td>
+        <td>10</td>
+        <td>10</td>
+        <td>19</td>
+      </tr>
 
-        <section> 
-
-        </section>
-        <Aside>
-
-        </Aside>
+    </tbody>
+  </table>
         <footer>
             <div>
               <a href="https://www.formula1.com"><img src="F1White.png"></a>
