--- a/curcuits.html
+++ b/curcuits.html
@@ -94,7 +94,7 @@
             <tbody>
                 <tr>
                     <td class="image-cell"><a href="https://f1.fandom.com/wiki/Adelaide_Street_Circuit"><img src="../Obr_Circuits/Adelaide.svg"></a><br> <label>Městský okruh Adelaide v Austrálii</label> </td>
-                    <td class="image-cell"><a href="https://f1.fandom.com/wiki/Ain-Diab_Circuit"><img src="../Obr_Circuits/Ain-diab.png"></a><br> <label> Ain-Diab Circuit</label> </td>
+                    <td class="image-cell"><a href="https://f1.fandom.com/wiki/Ain-Diab_Circuit"><img src="../Obr_Circuits/Ain-Diab.png"></a><br> <label> Ain-Diab Circuit</label> </td>
                     <td class="image-cell"><a href="https://f1.fandom.com/wiki/Aintree_Motor_Racing_Circuit"><img src="../Obr_Circuits/Aintree.webp"></a><br> <label>Aintree Motor Racing Circuit</label> </td>
                 </tr>
                 <tr>
