--- a/index.html
+++ b/index.html
@@ -81,7 +81,19 @@
           <a href="https://www.formula1.com/en/racing/2023/Monaco.html"><b>Číst více...</b></a>
         </p>
       </div>
+      
     
+    </div>
+    <div class="ff">
+      <div class="bb1">
+        <h1>Aston Martin ohlásil svého nového dodavatele</h1>
+        <img src="astonf1.jpg" alt="Aston Formule">
+        <p>
+          Aston Martin oznámil spolupráci s dodavatelem motorů Honda. Motor se bude dodávat od roku 2026.<br> Nyní Aston má motory od Mercedesu a Hondu využívá Redbull a AlphaTauri.
+          <br> 
+          <a href="https://www.skysports.com/f1/news/12477/12887654/aston-martin-confirm-honda-as-f1-engine-partner-from-2026-as-japanese-manufacturer-makes-official-return-to-sport"><b>Číst více...</b></a>
+        </p>
+      </div>
     </div>
 
 
